@@ -17,7 +17,12 @@
 *   Free Software Foundation, Inc.,                                       *
 *   51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.          *
 ***************************************************************************/
+#include <kdeversion.h>
+#if KDE_IS_VERSION(4,5,82)
+#include <solid/powermanagement.h>
+#else
 #include <solid/control/powermanager.h>
+#endif
 #include "shutdowndlg.h"
 #include "shutdowntorrentmodel.h"
 
@@ -31,16 +36,27 @@ namespace kt
 		
 		m_action->addItem(KIcon("system-shutdown"),i18n("Shutdown"));
 		m_action->addItem(KIcon("system-lock-screen"),i18n("Lock"));
+#if KDE_IS_VERSION(4,5,82)
+		QSet<Solid::PowerManagement::SleepState> spdMethods = Solid::PowerManagement::supportedSleepStates();
+		if (spdMethods.contains(Solid::PowerManagement::StandbyState))
+			m_action->addItem(KIcon("system-suspend"),i18n("Standby"));
+		
+		if (spdMethods.contains(Solid::PowerManagement::SuspendState))
+			m_action->addItem(KIcon("system-suspend"),i18n("Sleep (suspend to RAM)"));
+		
+		if (spdMethods.contains(Solid::PowerManagement::HibernateState))
+			m_action->addItem(KIcon("system-suspend-hibernate"),i18n("Hibernate (suspend to disk)"));
+#else
 		Solid::Control::PowerManager::SuspendMethods spdMethods = Solid::Control::PowerManager::supportedSuspendMethods();
 		if (spdMethods & Solid::Control::PowerManager::Standby) 
 			m_action->addItem(KIcon("system-suspend"),i18n("Standby"));
-		
+
 		if (spdMethods & Solid::Control::PowerManager::ToRam) 
 			m_action->addItem(KIcon("system-suspend"),i18n("Sleep (suspend to RAM)"));
-		
+
 		if (spdMethods & Solid::Control::PowerManager::ToDisk) 
 			m_action->addItem(KIcon("system-suspend-hibernate"),i18n("Hibernate (suspend to disk)"));
-		
+#endif
 		m_time_to_execute->addItem(i18n("When all torrents finish downloading"));
 		m_time_to_execute->addItem(i18n("When all torrents finish seeding"));
 		m_time_to_execute->addItem(i18n("When the events below happen"));
@@ -104,16 +120,27 @@ namespace kt
 		int stand_by = -1;
 		int suspend_to_ram = -1;
 		int suspend_to_disk = -1;
-		Solid::Control::PowerManager::SuspendMethods spdMethods = Solid::Control::PowerManager::supportedSuspendMethods();
-		if (spdMethods & Solid::Control::PowerManager::Standby)
+#if KDE_IS_VERSION(4,5,82)
+		QSet<Solid::PowerManagement::SleepState> spdMethods = Solid::PowerManagement::supportedSleepStates();
+		if (spdMethods.contains(Solid::PowerManagement::StandbyState))
 			stand_by = next++;
 		
-		if (spdMethods & Solid::Control::PowerManager::ToRam) 
+		if (spdMethods.contains(Solid::PowerManagement::SuspendState))
 			suspend_to_ram = next++;
 		
-		if (spdMethods & Solid::Control::PowerManager::ToDisk) 
+		if (spdMethods.contains(Solid::PowerManagement::HibernateState))
 			suspend_to_disk = next++;
-		
+#else
+                Solid::Control::PowerManager::SuspendMethods spdMethods = Solid::Control::PowerManager::supportedSuspendMethods();
+                if (spdMethods & Solid::Control::PowerManager::Standby)
+                        stand_by = next++;
+
+                if (spdMethods & Solid::Control::PowerManager::ToRam) 
+                        suspend_to_ram = next++;
+
+                if (spdMethods & Solid::Control::PowerManager::ToDisk) 
+                        suspend_to_disk = next++;
+#endif
 		if (idx == 0)
 			return SHUTDOWN;
 		else if (idx == 1)
@@ -134,15 +161,27 @@ namespace kt
 		int stand_by = -1;
 		int suspend_to_ram = -1;
 		int suspend_to_disk = -1;
+#if KDE_IS_VERSION(4,5,82)
+		QSet<Solid::PowerManagement::SleepState> spdMethods = Solid::PowerManagement::supportedSleepStates();
+		if (spdMethods.contains(Solid::PowerManagement::StandbyState))
+			stand_by = next++;
+		
+		if (spdMethods.contains(Solid::PowerManagement::SuspendState))
+			suspend_to_ram = next++;
+		
+		if (spdMethods.contains(Solid::PowerManagement::HibernateState))
+			suspend_to_disk = next++;
+#else
 		Solid::Control::PowerManager::SuspendMethods spdMethods = Solid::Control::PowerManager::supportedSuspendMethods();
 		if (spdMethods & Solid::Control::PowerManager::Standby)
 			stand_by = next++;
-		
+
 		if (spdMethods & Solid::Control::PowerManager::ToRam) 
 			suspend_to_ram = next++;
-		
+
 		if (spdMethods & Solid::Control::PowerManager::ToDisk) 
 			suspend_to_disk = next++;
+#endif
 			
 		switch (act)
 		{
