@@ -6,6 +6,7 @@ Changes in 4.0.5:
 - Improve performance of View (258324)
 - Fix bug causing user modified filename not be shown for single file torrents (258860)
 - Ensure that lastSaveDir is saved to the config (259041)
+- Make sure ktorrent compiles and works with new solid powermanagement api introduced in KDE 4.6beta2 (258331)
 
 Changes in 4.0.4:
 - Make sure that syndication filter save location overrides group save location (250116)
